<resources>
    <string name="dateDefaultText">dd mmm yyyy</string>
    <string name="timeDefaultText">hh:mm</string>

    <!-- MainMenu -->
    <string name="menuNavNote">Notas</string>
    <string name="menuNavReminder">Recordatorios</string>
    <string name="menuNavTasklist">Lista de tareas</string>
    <string name="menuDividerTask">Tareas</string>
    <string name="menuNavMyday">Mi día</string>
    <string name="menuNavMyweek">Mi semana</string>
    <string name="tvNoteNoDataText"><b>Sin Notas Encontradas</b>\n\nParece que aún no has creado ninguna nota. ¡Hora de empezar! Pulsa el botón \"+\" para añadir una nueva nota y organizar tu día.</string>

    <!-- ManageNoteFragment -->
    <string name="tvNoteTitleText">Título</string>
    <string name="tvNoteDescriptionText">Empieza a escribir</string>

    <!-- EditNoteMenu -->
    <string name="editNoteSaveTitle">Guardar</string>
    <string name="editNoteDeleteTitle">Borrar</string>

    <!-- DeleteNoteDialog -->
    <string name="dialogDeleteNoteTitle">Eliminar Nota</string>
    <string name="dialogDeleteNoteDescription">¿Desea borrar esta nota?</string>
    <string name="dialogDeleteNoteNegativeAction">Cancelar</string>
    <string name="dialogDeleteNotePositiveAction">Borrar</string>

    <!-- SaveNoteToast -->
    <string name="toastSaveNoteText">Nota guardada exitosamente</string>

    <!-- RemindersFragment -->
    <string name="tvReminderNoDataText"><b>No hay recordatorios pendientes</b>\n\nParece que no tienes ningún recordatorio programado. ¡Aprovecha este momento para relajarte o planificar nuevas tareas! Si necesitas configurar un recordatorio, pulsa el botón \"+\".</string>
    <string name="dialogInsertReminderPositiveAction">Crear</string>
    <string name="dialogInsertReminderNegativeAction">Cancelar</string>
    <string name="dialogSaveReminderPositiveAction">Guardar</string>
    <string name="dialogSaveReminderNegativeAction">Eliminar</string>

    <!-- DaysOfWeek -->
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>

    <!-- ManageRemindersDialog -->
    <string name="tvAddDateTextReminderText">Definir recordatorio</string>
    <string name="btnMondayText">L</string>
    <string name="btnTuesdayText">M</string>
    <string name="btnWednesdayText">X</string>
    <string name="btnThursdayText">J</string>
    <string name="btnFridayText">V</string>
    <string name="btnSaturdayText">S</string>
    <string name="btnSundayText">D</string>

    <!-- MydayFragment -->
    <string name="tvMydayTodayText">Hoy</string>
    <string name="tvMydayTomorrowText">Mañana</string>
    <string name="tvNoDataTodayText"><b>¡Sin notificaciones hoy!</b>\n\nParece que no tienes ninguna notificación pendiente para hoy. ¡Disfruta de un día tranquilo!</string>
    <string name="tvNoDataTomorrowText"><b>¡Sin notificaciones para mañana!</b>\n\nParece que no tienes ninguna notificación programada para mañana. ¡Aprovecha este día para relajarte o planificar nuevas actividades!</string>
</resources>