<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.managenote.ManageNoteFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMarginBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMarginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <EditText
        android:id="@+id/tvNoteTitle"
        style="@style/TextTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:hint="@string/tvNoteTitleText"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/glMarginEnd"
        app:layout_constraintStart_toStartOf="@+id/glMarginBegin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNoteDate"
        style="@style/TextSubtitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey"
        android:text="@string/dateDefaultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glMarginBegin"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />

    <EditText
        android:id="@+id/tvNoteDescription"
        style="@style/TextBody2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/tvNoteDescriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glMarginEnd"
        app:layout_constraintStart_toStartOf="@+id/glMarginBegin"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteDate" />
</androidx.constraintlayout.widget.ConstraintLayout>